			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05b: *********************************

IMP: (10/11/06, GVG) More min contact primitives for node extraction.

IMP: (10/11/06, DN) "CellBackup" has index of exports sorted by original node.
    It will be used in Geometry calculations in immuable data base.
    "NodeInst.exports" field is no more necessary.

IMP: (10/10/06, DN) Lazy computation of Cell's RTree.

BUG: (10/9/06, DN) Random ExportIds are created too often.
FIX: Create them only when there is another export with the same externalId.

BUG: (10/6/06, SMR) Variables on exports on rotated nodes don't move right (Bug #1232).
FIX: In CircuitChangeJobs.ManyMove.moveSelectedText(), only transform Export text
     if it is the export name.

IMP: (10/6/06, SMR) Generalized routing to handle individual end extension.

BUG: (10/4/06, SMR) Narrow non-manhattan polygons not detected by DRC.
FIX: Fixed GenMath.intersectRadians() and Quick.checkMinWidth().

IMP/MAN: (10/4/06, SMR) Added "Window / Waveform Window / Export Simulation Data" to
     write tab-separated file of simulation data.

IMP/MAN: (10/3/06, SMR) Moved "Plot Date In Corner" to the PostScript
     section of the Printing Preferences.

BUG: (10/3/06, SMR) Routing node to arc may crash.  Reporting sometimes bad.
FIX: Moved reporting from Routing.createRouteNoJob() to Routing.reportRoutingResults().

************************* Version 8.05a: *********************************

BUG: (10/03/06, DN) Ports disappearing with wire deletion (Bug #1236).
FIX: In NodeInst.kill mark for deletion only exports connected to this NodeInst.

IMP/MAN: (10/02/06, GVG) Adding nodes that meet min rules in TSMC180.

IMP/MAN: (9/28/06, GVG) Warning if you try to bring a 3D view from technologies without 3D factory
values.

BUG: (9/28/06, DN) Exception in cellGroup.contains(Cell) in duplicateGroupAction (Bug #1234).