@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.05b: *********************************
 
+BUG: (10/12/06, SMR) Wiring a port to itself crashes (Bug #1242).
+FIX: In Router.createRouteNoJob(), make sure route.getStart() is valid.
+
 IMP: (10/11/06, GVG) More min contact primitives for node extraction.
 
 IMP: (10/11/06, DN) "CellBackup" has index of exports sorted by original node.
